--- a/photography.html
+++ b/photography.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,7 +37,7 @@
       </div>
 
     <div>
-      <img src="css/photography.png" alt="" class="img-fluid">
+      <img src="css/photography-compressed.jpg" alt="" class="img-fluid">
     </div>
     
 </body>
