--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -37,7 +37,7 @@
       </div>
 
       <div>
-        <img src="css/graphicDesign.jpg" alt="" class="img-fluid">
+        <img src="css/graphicDesign-compressed.jpg" alt="" class="img-fluid">
       </div>
 
 
