--- a/photography.html
+++ b/photography.html
@@ -37,7 +37,7 @@
       </div>
 
     <div>
-      <img src="css/photography-compressed.jpg" alt="" class="img-fluid">
+      <img src="photography-compressed.jpg" alt="" class="img-fluid">
     </div>
     
 </body>
