--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div>
         <p class="paragraph-tag">
           This Website Displays The Work Of Sharyar<br>
-            Siddique. The Contents Of This Website<br>
+            Siddiqui. The Contents Of This Website<br>
               Inlude Photography Pieces. Graphic<br>
             Design Projects & Other Design Projects<br>
                 That Have Been Created By<br>
